

ADD_SUBDIRECTORY(./demo00lib)
ADD_SUBDIRECTORY(./demo01class)
ADD_SUBDIRECTORY(./demo02)
ADD_SUBDIRECTORY(./demo03Interface)
ADD_SUBDIRECTORY(./demo04File)
ADD_SUBDIRECTORY(./demo05)
ADD_SUBDIRECTORY(./demo06Signal)
ADD_SUBDIRECTORY(./demo07MultiThread)
ADD_SUBDIRECTORY(./demo08STL)

ADD_SUBDIRECTORY(./experiment03)
ADD_SUBDIRECTORY(./experiment04)
ADD_SUBDIRECTORY(./experiment05)
ADD_SUBDIRECTORY(./experiment06)
ADD_SUBDIRECTORY(./experiment07)

